added home-section/half-added navbar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Передовая IT студия</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+                <div class="d-element">
+                    <a>Главная</a>
+                </div>
+                <a>Наши услуги</a>
+                <a>Новости</a>
+                <a>Контакты</a>
+        </div>
+    </nav>
+    <section class="home-section">
+        <div class="home-section-content container">
+            <h3>Передовая IT студия</h3>
+            <h1>Мы создаем легкие решения сложных задач и проблем</h1>
+            <button class="primary-button">Все услуги</button>
+        </div>
+    </section>
 </body>
 </html>
