--- a/index.html
+++ b/index.html
@@ -9,18 +9,55 @@
 <body>
     <nav class="navbar">
         <div class="container">
-                <div class="d-element">
-                    <a>Главная</a>
-                </div>
-                <a>Наши услуги</a>
+            <div class="m-element">
+                <a>Главная</a>
+            </div>
+            <div class="m-element">
+                <a>Наши проекты</a>
+            </div>
+            <div class="m-element">
+                <a>Услуги</a>
+            </div>
+            <div class="m-element">
                 <a>Новости</a>
+            </div>
+            <div class="m-element">
                 <a>Контакты</a>
+            </div>
         </div>
     </nav>
     <section class="home-section">
         <div class="home-section-content container">
             <h3>Передовая IT студия</h3>
             <h1>Мы создаем легкие решения сложных задач и проблем</h1>
+            <button class="primary-button">Все услуги</button>
+        </div>
+    </section>
+    <section class="offers">
+        <div class="container">
+            <h2>Мы создаем мобильные приложения <br/>для крупных корпораций</h2>
+            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem <br/> Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
+            <div class="offer-point">
+                <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
+                <div class="o-cont">
+                    <div class="m-offer">Создание сайтов</div>
+                    <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
+                </div>
+            </div>
+            <div class="offer-point">
+                <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
+                <div class="o-cont">
+                    <div class="m-offer">Создание сайтов</div>
+                    <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
+                </div>
+            </div>
+            <div class="offer-point">
+                <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
+                <div class="o-cont">
+                    <div class="m-offer">Создание сайтов</div>
+                    <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
+                </div>
+            </div>
             <button class="primary-button">Все услуги</button>
         </div>
     </section>
