--- a/index.html
+++ b/index.html
@@ -37,28 +37,48 @@
         <div class="container">
             <h2>Мы создаем мобильные приложения <br/>для крупных корпораций</h2>
             <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem <br/> Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. </p>
-            <div class="offer-point">
-                <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
-                <div class="o-cont">
-                    <div class="m-offer">Создание сайтов</div>
-                    <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
+            <div class="o-location">
+                <div class="offer-point">
+                    <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
+                    <div class="o-cont">
+                        <div class="m-offer">Создание сайтов</div>
+                        <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
+                    </div>
+                </div>
+                <div class="offer-point">
+                    <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
+                    <div class="o-cont">
+                        <div class="m-offer">Создание сайтов</div>
+                        <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
+                    </div>
+                </div>
+                <div class="offer-point">
+                    <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
+                    <div class="o-cont">
+                        <div class="m-offer">Создание сайтов</div>
+                        <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
+                    </div>
                 </div>
             </div>
-            <div class="offer-point">
-                <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
-                <div class="o-cont">
-                    <div class="m-offer">Создание сайтов</div>
-                    <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
-                </div>
+            <div class="e"><button class="primary-button">Все услуги</button></div>
+        </div>
+    </section>
+    <section class="studios-result">
+        <div class="container">
+           <div class="txt-part">
+            <div class="titl">Высокие стандарты <br/>
+                разработки</div>
+            <div class="dev-info">
+                Lorem Ipsum - это текст-"рыба", часто используемый в<br/> печати и вэб-дизайне. Lorem Ipsum является стандартной<br/> "рыбой" для текстов на латинице с начала XVI века.<br/>  стандартной "рыбой" для текстов на латинице с начала<br/> XVI века. 
             </div>
-            <div class="offer-point">
-                <img src="./assetss/img/Без имени-1.png" width="110" height="110" alt="картинка сдохла">
-                <div class="o-cont">
-                    <div class="m-offer">Создание сайтов</div>
-                    <div class="o-expl">Lorem Ipsum - это текст-<br/> "рыба", часто используе в<br/> печати и вэб-дизайне.</div>
-                </div>
+            <div class="about-link">
+                <a href="">Подробнее о компании</a>
             </div>
-            <button class="primary-button">Все услуги</button>
+           </div>
+           <div class="media-part">
+               <img src="./assetss/img/Rectangle 2.png" alt="картинка сдохла">
+           </div>
+
         </div>
     </section>
 </body>
